# memoryatlas

./: .cursorrules  .gitignore  README.md  config.example.yaml  pyproject.toml
memoryatlas/: __init__.py  __main__.py  apple.py  cli.py  config.py  constants.py  db.py  enricher.py  models.py  philologist.py  publisher.py  scanner.py  transcriber.py  util.py
scripts/: deploy-to-anvil.sh
tests/: conftest.py  test_config.py  test_db.py  test_models.py  test_philologist.py  test_publisher.py
